[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-web = "4.4.0"
actix-web-lab = "0.19.1"
actix-rt = "2.9.0"
reqwest = "0.11.20"
tokio = "1.32.0"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
dotenv = "0.15.0"
sha2 = "0.10.8"
chrono = "0.4.31"
hex = "0.4.3"
ring = "0.17.0"
rocksdb="0.21.0"
